@@ -1,6 +1,6 @@
 plugins {
   id 'application'
-  id 'pmd'
+  id 'idea'
   id 'jacoco'
   id 'io.spring.dependency-management' version '1.0.11.RELEASE'
   id 'org.springframework.boot' version '2.4.5'
@@ -16,14 +16,6 @@ version = '0.0.1'
 
 sourceCompatibility = 11
 targetCompatibility = 11
-
-configurations {
-  providedRuntime
-  annotationProcessor
-  aatCompile.extendsFrom(testCompile)
-  aatRuntime.extendsFrom(testRuntime)
-  cucumberRuntime.extendsFrom(functionalRuntime)
-}
 
 
 sourceSets {
@@ -55,6 +47,16 @@ sourceSets {
   }
 }
 
+idea {
+  module {
+    // config to allow Intellij to mark test source and resource files correctly to help linting tools
+    testSourceDirs += project.sourceSets.functionalTest.java.srcDirs
+    testSourceDirs += project.sourceSets.integrationTest.java.srcDirs
+    testResourceDirs += project.sourceSets.functionalTest.resources.srcDirs
+    testResourceDirs += project.sourceSets.integrationTest.resources.srcDirs
+  }
+}
+
 tasks.withType(JavaCompile) {
   options.compilerArgs << "-Xlint:unchecked" << "-Werror"
 }
@@ -73,29 +75,30 @@ test {
 }
 
 task functional(type: Test) {
-  description = 'Executes functional tests against an the HMC HMI Outbound Adapter API instance just deployed'
-  dependsOn functionalTestClasses
-  new File("$buildDir/test-results/test").mkdirs()
-  copy {
-    from "src/aat/resources/DummyTest.xml"
-    into "$buildDir/test-results/test"
-  }
+  description = "Runs functional tests"
+  group = "Verification"
+  testClassesDirs = sourceSets.functionalTest.output.classesDirs
+  classpath = sourceSets.functionalTest.runtimeClasspath
 
-  doFirst {
+  generateCucumberReports.enabled = false
+
+  doLast {
     generateCucumberReports.enabled = true
+
     javaexec {
-      main = "uk.gov.hmcts.hmc.hmi.befta.OutboundAdapterBeftaMain"
-      classpath += configurations.cucumberRuntime + sourceSets.aat.runtimeClasspath + sourceSets.main.output + sourceSets.test.output
+      main = "uk.gov.hmcts.reform.hmc.hmi.befta.OutboundAdapterBeftaMain"
+      classpath += sourceSets.functionalTest.runtimeClasspath + sourceSets.main.output + sourceSets.test.output
       args = [
+        '--strict',
         '--threads', '10',
         '--plugin', "json:${rootDir}/target/cucumber.json",
+        '--plugin', "junit:${buildDir}/test-results/functional/cucumber.xml",
         '--tags', 'not @Ignore',
-        '--glue', 'uk.gov.hmcts.befta.player',
-        '--glue', 'uk.gov.hmcts.hmc.hmi.befta', 'src/aat/resources/features'
+        '--glue', 'uk.gov.hmcts.befta.player', 'src/functionalTest/resources/features'
       ]
+      // '--add-opens=...' added to suppress 'WARNING: An illegal reflective access operation has occurred' in uk.gov.hmcts.befta.util.CucumberStepAnnotationUtils
       jvmArgs = [ '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED' ]
     }
-
   }
 
   finalizedBy {
@@ -125,17 +128,24 @@ task smoke(type: Test) {
 
   new File("$buildDir/test-results/test").mkdirs()
   copy {
-    from "src/aat/resources/DummyTest.xml"
+    from "src/functional/resources/DummyTest.xml"
     into "$buildDir/test-results/test"
   }
 
   doLast {
     generateCucumberReports.enabled = true
     javaexec {
-      main = "uk.gov.hmcts.hmc.hmi.befta.OutboundAdapterBeftaMain"
-      classpath += configurations.cucumberRuntime + sourceSets.aat.runtimeClasspath
-      args = ['--plugin', "json:${rootDir}/target/cucumber.json", '--tags', '@Smoke and not @Ignore', '--glue',
-              'uk.gov.hmcts.befta.player', '--glue', "uk.gov.hmcts.hmc.hmi.befta", 'src/aat/resources/features']
+      main = "uk.gov.hmcts.reform.hmc.hmi.befta.OutboundAdapterBeftaMain"
+      classpath += sourceSets.functionalTest.runtimeClasspath + sourceSets.main.output + sourceSets.test.output
+      args = [
+        '--strict',
+        '--threads', '10',
+        '--plugin', "json:${rootDir}/target/cucumber.json",
+        '--plugin', "junit:${buildDir}/test-results/functional/cucumber.xml",
+        '--tags', 'not @Ignore',
+        '--glue', 'uk.gov.hmcts.befta.player', 'src/functionalTest/resources/features'
+      ]
+      // '--add-opens=...' added to suppress 'WARNING: An illegal reflective access operation has occurred' in uk.gov.hmcts.befta.util.CucumberStepAnnotationUtils
       jvmArgs = [ '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED' ]
     }
   }
@@ -146,6 +156,7 @@ task smoke(type: Test) {
         delete "${rootDir}/BEFTA Report for Smoke Tests/"
         new File("${rootDir}/BEFTA Report for Smoke Tests").mkdirs()
         file("${rootDir}/target/cucumber/cucumber-html-reports").renameTo(file("${rootDir}/BEFTA Report for Smoke Tests"))
+
         logger.quiet("Smoke test report moved to ---> file://${rootDir}/BEFTA%20Report%20for%20Smoke%20Tests/overview-features.html")
       }
     }
@@ -154,17 +165,21 @@ task smoke(type: Test) {
   outputs.upToDateWhen { false }
 }
 
-pmd {
-  toolVersion = "6.18.0"
-  sourceSets = [sourceSets.main, sourceSets.test, sourceSets.functionalTest, sourceSets.integrationTest, sourceSets.smokeTest]
-  reportsDir = file("$project.buildDir/reports/pmd")
-  // https://github.com/pmd/pmd/issues/876
-  ruleSets = []
-  ruleSetFiles = files("config/pmd/ruleset.xml")
+cucumberReports {
+  outputDir = file("${rootDir}/target/cucumber")
+  reports = files("${rootDir}/target/cucumber.json")
 }
 
+task customCleanBeftaReports(type:Delete) {
+  delete "${rootDir}/BEFTA Report for Smoke Tests/"
+  delete "${rootDir}/BEFTA Report for Functional Tests/"
+  delete "${rootDir}/target/cucumber"
+  delete "${rootDir}/target/cucumber.json"
+}
+tasks.clean.dependsOn(tasks.customCleanBeftaReports)
+
 jacocoTestReport {
-  executionData(test, integration)
+  executionData(test)
   reports {
     xml.enabled = true
     csv.enabled = false
@@ -179,8 +194,21 @@ sonarqube {
     property "sonar.projectName", "Reform :: hmc-hmi-outbound-adapter"
     property "sonar.projectKey", "uk.gov.hmcts.reform:hmc-hmi-outbound-adapter"
     property "sonar.coverage.jacoco.xmlReportPaths", "${jacocoTestReport.reports.xml.destination.path}"
+    property "sonar.coverage.exclusions", "**/hmi/Application.java"
   }
 }
+
+def versions = [
+  junit           : '5.7.1',
+  junitPlatform   : '1.7.1',
+  lombok          : '1.18.8',
+  mapstruct       : '1.4.2.Final',
+  reformLogging   : '5.1.7',
+  springBoot      : springBoot.class.package.implementationVersion,
+  springCloud     : '2020.0.1',
+  springfoxSwagger: '3.0.0',
+  testcontainers  : '1.15.2'
+]
 
 // before committing a change, make sure task still works
 dependencyUpdates {
@@ -197,17 +225,6 @@ dependencyUpdates {
 dependencyCheck {
   suppressionFile = 'config/owasp/suppressions.xml'
 }
-
-def versions = [
-  junit           : '5.7.1',
-  junitPlatform   : '1.7.1',
-  junitVintageVersion : '5.5.2',
-  reformLogging   : '5.1.7',
-  lombok          : '1.18.8',
-  springBoot      : springBoot.class.package.implementationVersion,
-  springfoxSwagger: '3.0.0'
-]
-
 
 dependencyManagement {
   dependencies {
@@ -245,9 +262,7 @@ ext.libraries = [
     "org.junit.jupiter:junit-jupiter-engine:${versions.junit}",
     "org.junit.jupiter:junit-jupiter-params:${versions.junit}",
     "org.junit.platform:junit-platform-commons:${versions.junitPlatform}",
-    "org.junit.platform:junit-platform-engine:${versions.junitPlatform}",
-    "org.junit.platform:junit-platform-engine:${versions.junitPlatform}",
-    "org.junit.vintage:junit-vintage-engine:${versions.junitVintageVersion}"
+    "org.junit.platform:junit-platform-engine:${versions.junitPlatform}"
   ]
 ]
 
@@ -256,6 +271,9 @@ dependencies {
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json'
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-cache'
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
 
   implementation group: 'io.springfox', name: 'springfox-swagger2', version: versions.springfoxSwagger
 
@@ -279,7 +297,6 @@ dependencies {
   functionalTestImplementation libraries.junit5
 
   smokeTestImplementation sourceSets.main.runtimeClasspath
-  implementation 'junit:junit:4.12'
 }
 
 mainClassName = 'uk.gov.hmcts.reform.hmc.Application'
